# wgpu-raytracing

./: Cargo.toml
src/: main.rs  renderer.rs
src/shaders/: ray_chit.wgsl  ray_gen.wgsl  ray_miss.wgsl
